Добавление автотестов с созданием списка заметок.