@@ -29,12 +29,19 @@ android {
     }
     
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
+    }
+    
+    testOptions {
+        unitTests.all {
+            it.useJUnitPlatform()
+            it.jvmArgs = ['--add-opens=java.base/java.lang=ALL-UNNAMED']
+        }
     }
 }
 
@@ -50,26 +57,33 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
     
     // Koin
-    implementation 'io.insert-koin:koin-android:3.5.3'
+    implementation "io.insert-koin:koin-android:3.5.3"
+    implementation "io.insert-koin:koin-androidx-navigation:3.5.3"
     
     // Gson
     implementation 'com.google.code.gson:gson:2.10.1'
     
-    // Testing
+    // Тестирование - используем одинаковые версии
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
-    // Kaspresso
-    androidTestImplementation "com.kaspersky.android-components:kaspresso:1.5.4"
-    androidTestUtil("androidx.test:orchestrator:1.5.0")
-
-    // Espresso
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.4.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.4.0'
-
+    
     // AndroidX Test
-    androidTestImplementation 'androidx.test:runner:1.4.0'
-    androidTestImplementation 'androidx.test:rules:1.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test:runner:1.5.2'
+    androidTestImplementation 'androidx.test:rules:1.5.0'
+    androidTestUtil 'androidx.test:orchestrator:1.5.0'
+    
+    // Espresso - используем одну версию для всех компонентов
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.5.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.1'
+    
+    // Koin для тестирования
+    testImplementation "io.insert-koin:koin-test:3.5.3"
+    testImplementation "io.insert-koin:koin-test-junit4:3.5.3"
+    androidTestImplementation "io.insert-koin:koin-test:3.5.3"
+    androidTestImplementation "io.insert-koin:koin-test-junit4:3.5.3"
+    
+    // Kakao и Kaspresso
+    androidTestImplementation "com.kaspersky.android-components:kaspresso:1.4.0"
+    androidTestImplementation "io.github.kakaocup:kakao:3.0.6"
 }
